--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oscar Vieujean - Développeur Full Stack</title>
-    <meta name="description" content="Portfolio d'Oscar Vieujean, développeur Full Stack spécialisé en React, Node.js et technologies web modernes." />
+    <meta name="description" content="Portfolio d'Oscar Vieujean, développeur Full Stack spécialisé en React, Node.js et technologies web modernes. Master 2 Informatique." />
+    <meta name="author" content="Oscar Vieujean" />
+
+
   </head>
+
   <body>
     <div id="root"></div>
-    <!-- NE RIEN METTRE ICI pour Vite injecte automatiquement le script -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
