--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oscar Vieujean - Développeur Full Stack</title>
+    <title>Oscar Vieujean  </title>
     <meta name="description" content="Portfolio d'Oscar Vieujean, développeur Full Stack spécialisé en React, Node.js et technologies web modernes. Master 2 Informatique." />
     <meta name="author" content="Oscar Vieujean" />
 
